adicionando overflow e float no painel. fixes #487

--- a/public/stylesheets/new-style.css
+++ b/public/stylesheets/new-style.css
@@ -3921,10 +3921,11 @@ a.clean:hover {
 }
 
 .big-tabs > .panel {
-
   border: 1px solid rgb(179, 179, 179);
   padding: 40px 60px;
   background-color: white;
+  overflow: hidden;
+  float: left;
 }
 
 .borderradius .big-tabs > .panel {
